# CSIKit

./: .gitignore  CITATION.cff  LICENSE.txt  README-pypi.md  README.md  _config.yml  batch_graph.py  convert_csv.py  csitools.py  errors.py  filters.py  get_info.py  index.md  intelcompare.asv  inteltest.mat  main.py  matlab.py  netlink.py  nexgraph.py  read_bfee.py  read_pcap.py  realtime_graph.py  receiver.py  requirements.txt  setup.cfg  setup.py  test.mat  utils.py
.github/workflows/: python-publish.yml
.semaphore/: semaphore.yml
CSIKit/: __init__.py  __main__.py  batch_graph.py  convert_csv.py  csitools.py  filters.py  get_info.py  matlab.py  read_atheros.py  read_bfee.py  read_pcap.py  reader.py  requirements.txt
CSIKit/csi/: __init__.py  csidata.py  csiframe.py  csimetadata.py
CSIKit/csi/frames/: __init__.py  ath.py  esp.py  feitcsi.py  iwl.py  mvm.py  nex.py  usr.py
CSIKit/data/: README.md
CSIKit/data/esp32/: example_100hz_pitraffic.csv  example_data.csv  example_fast2_100hz_pitraffic.csv  example_fast_100hz_pitraffic.csv  output.csv
CSIKit/data/feitcsi/: HESU160_5500.csi  HESU20_5500.csi  HESU40_5500.csi  HESU80_5500.csi  HT20_2452.csi  HT40_2452.csi  VHT160_5500.csi  VHT20_5500.csi  VHT40_5500.csi  VHT80_5500.csi
CSIKit/data/intel/: ax200_agc_demo.csi  ax200_demo.csi  rx_8_211119_171706.csi  rx_8_211206_152319.csi  rx_8_211206_161457.csi  rx_8_211217_191036.csi
CSIKit/data/nexmon/: example_4339.pcap  example_43455c0.pcap  example_4366c0.pcap  test.py  test2.py
CSIKit/data/pi/: 40mhz_1600085286.pcap  walk_1597159475.pcap
CSIKit/data/pico/: picoscenes_iwl5300_example2.csi  rx_2_210717_164805.csi
CSIKit/filters/: passband.py  statistical.py
CSIKit/filters/wavelets/: dwt.py
CSIKit/legacy/: batch_graph.py  nexgraph.py  realtime_graph.py  receiver.py  run_test.py
CSIKit/reader/: __init__.py  reader.py  reader_selector.py
CSIKit/reader/readers/: __init__.py  read_atheros.py  read_bfee.py  read_csv.py  read_feitcsi.py  read_pcap.py  read_pico.py
CSIKit/reader/readers/pico/: AbstractPicoScenesFrameSegment.py  CSISegment.py  ExtraInfoSegment.py  FrameContainer.py  MVMExtraSegment.py  ModularPicoScenesFrame.py  RxSBasicSegment.py  utils.py
CSIKit/scripts/: create_test.sh  enable-csi-logging.sh
CSIKit/scripts/matlab/: intelcsi_heatmap.m
CSIKit/tests/: brushteeth_1590158472.mat
CSIKit/tests/intel/: README.md
CSIKit/tests/nexmon/: README.md  test_nexmon.py
CSIKit/tools/: __init__.py  batch_graph.py  convert_csv.py  convert_json.py  convert_npz.py  get_info.py  run_test.py
CSIKit/util/: byteops.py  constants.py  csitools.py  errors.py  filters.py  matlab.py  stringops.py
CSIKit/visualization/: graph.py  metric.py  plot_scenario.py  plot_szenario.py
_site/: index.html
_site/assets/css/: style.css  style.css.map
binaries/: log_to_file
data/: README.md
docs/: scenario_plot.ipynb  szenario_plot.ipynb
docs/source/: conf.py  index.rst
idea/: .gitignore  misc.xml  modules.xml
legacy/: batch_graph.py  nexgraph.py  receiver.py
misc/: phase_calibration.py
scripts/: create_test.sh  enable-csi-logging.sh  generate-traffic.sh  send-empty-packets.sh
scripts/matlab/: intelcompare.m
tests/: cook_1590161749.mat  log.all_csi.6.7.6.mat  walk_1590161182.mat
tests/matlab/intel/: README.md  test_intel.py
tests/matlab/nexmon/: README.md  test_nexmon.py
tests/reader/: test_pcap.py
(+9 files in other folders)
