[metadata]
name = CSIKit
author = Glenn Forbes
author_email = g.r.forbes@rgu.ac.uk
description = Tools for extracting Channel State Information from files produced by a range of WiFi hardware/drivers.
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/Gi-z/CSIKit
version = 1.0.6
keywords =
  csi
  csi-data
  csi-extraction-suite
  csi-parsing
  intel
  visualisation
  wifi-hardware
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
license_files = 
  LICENSE.txt

[options]
python_requires = >= 3.5
packages = 
  CSIKit
install_requires =
  numpy==1.19.3
  matplotlib==3.3.3
  scikit-learn==0.23.2
  pandas==1.1.4

[options.entry_points]
console_scripts =
  csikit=CSIKit.__main__:main