[metadata]
name = CSIKit
author = Glenn Forbes
author_email = g.r.forbes@rgu.ac.uk
description = Tools for extracting Channel State Information from files produced by a range of WiFi hardware/drivers.
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/Gi-z/CSIKit/
version = 2.5.1
keywords =
  csi
  csi-data
  csi-extraction-suite
  csi-parsing
  intel
  visualisation
  wifi-hardware
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
license_files = 
  LICENSE.txt

[options]
python_requires = >= 3.8
packages = 
  CSIKit
  CSIKit.csi
  CSIKit.csi.frames
  CSIKit.filters
  CSIKit.filters.wavelets
  CSIKit.reader
  CSIKit.reader.readers
  CSIKit.reader.readers.pico
  CSIKit.tools
  CSIKit.util
  CSIKit.visualization
install_requires =
  matplotlib
  scikit-learn
  pandas
  PyWavelets
  numpy

[options.entry_points]
console_scripts =
  csikit=CSIKit.__main__:main
